this is the second commit

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="invitation-card">
         <h1>Wedding Invitation</h1>
         <p>We are excited to invite you to the wedding of</p>
-        <h2>Mohit &amp; Kajal</h2>
+        <h2>Mohit &amp; Rajni</h2>
         <p class="date">Date: Friday, September 22, 2023</p>
         <p class="location">Location: Double spoon Hisar</p>
         <p>Please join us in celebrating this joyous occasion.</p>
